Rename classes (cards, jumbotron)

--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -6787,7 +6787,7 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -6819,24 +6819,13 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
-    font-size: var(--lhy-d-yl);
-    line-height: var(--fme-bf-w);
-  }
-}
-@media (prefers-reduced-motion: reduce) {
-  .dir.d1rhokcl[class][class]:focus-visible {
-    transition: none;
-  }
-}
-@media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -6847,7 +6836,18 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
+    font-size: var(--lhy-d-yl);
+    line-height: var(--fme-bf-w);
+  }
+}
+@media (prefers-reduced-motion: reduce) {
+  .dir.d1rhokcl[class][class]:focus-visible {
+    transition: none;
+  }
+}
+@media (max-width: 743px) {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -6863,7 +6863,7 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -6874,7 +6874,7 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -9770,7 +9770,7 @@ select[disabled] {
   z-index: 1 !important;
 }
 @media (min-width: 744px) {
-  ._azlf03 {
+  .explore-description-text-wrapper {
     font-size: 16px !important;
     line-height: 24px !important;
     margin-top: 12px !important;
@@ -9782,7 +9782,7 @@ select[disabled] {
   }
 }
 @media (min-width: 744px) {
-  ._azlf03 {
+  .explore-description-text-wrapper {
     font-size: 16px !important;
     line-height: 24px !important;
     margin-top: 12px !important;
@@ -9867,12 +9867,12 @@ select[disabled] {
   }
 }
 @supports (overflow: clip) {
-  .t1jojoys[class][class] {
+  .explore-cards-details__title[class][class] {
     overflow: clip;
   }
 }
 @supports (overflow: clip) {
-  .s1cjsi4j[class][class] {
+  .explore-cards-details__description[class][class] {
     overflow: clip;
   }
 }
@@ -12593,7 +12593,7 @@ select[disabled] {
   font-weight: var(--h-oqhch);
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -12633,24 +12633,13 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
-    font-size: var(--lhy-d-yl);
-    line-height: var(--fme-bf-w);
-  }
-}
-@media (prefers-reduced-motion: reduce) {
-  .dir.d1rhokcl[class][class]:focus-visible {
-    transition: none;
-  }
-}
-@media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -12661,7 +12650,18 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
+    font-size: var(--lhy-d-yl);
+    line-height: var(--fme-bf-w);
+  }
+}
+@media (prefers-reduced-motion: reduce) {
+  .dir.d1rhokcl[class][class]:focus-visible {
+    transition: none;
+  }
+}
+@media (max-width: 743px) {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -12689,7 +12689,7 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
@@ -12699,30 +12699,29 @@ select[disabled] {
     transition: none;
   }
 }
-.hyt39vx[class][class] {
+.jumbotron-header__text[class][class] {
   color: var(--f-k-smk-x);
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--h-oqhch);
   font-size: var(--cv-p-u-ui);
   line-height: var(--hu-t-o-g-n);
 }
-.dir.hyt39vx[class][class] {
+.dir.jumbotron-header__text[class][class] {
   margin-bottom: var(--fgg-f-l-a);
 }
 @media (max-width: 743px) {
-  .hyt39vx[class][class] {
+  .jumbotron-header__text[class][class] {
     font-size: var(--lhy-d-yl);
     line-height: var(--fme-bf-w);
   }
 }
-.bqwnmiz[class][class] {
-  color: var(--fo-jk-r-s);
-}
-.s1c20d1w[class][class] {
+
+.jumbotron-header__description[class][class] {
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--e-y-j-d-v-j);
+  color: var(--fo-jk-r-s);
 }
-.dir.s1c20d1w[class][class] {
+.dir.jumbotron-header__description[class][class] {
   margin-top: var(--fgg-f-l-a);
 }
 ._fg1o5k {
@@ -12773,13 +12772,13 @@ select[disabled] {
   font-size: 22px !important;
   line-height: 26px !important;
 }
-._azlf03 {
+.explore-description-text-wrapper {
   font-size: 14px !important;
   line-height: 20px !important;
   width: fit-content !important;
 }
 @media (min-width: 744px) {
-  ._azlf03 {
+  .explore-description-text-wrapper {
     font-size: 16px !important;
     line-height: 24px !important;
     margin-top: 12px !important;
@@ -12986,12 +12985,12 @@ select[disabled] {
   background-repeat: no-repeat !important;
 }
 @supports (overflow: clip) {
-  .t1jojoys[class][class] {
+  .explore-cards-details__title[class][class] {
     overflow: clip;
   }
 }
 @supports (overflow: clip) {
-  .s1cjsi4j[class][class] {
+  .explore-cards-details__description[class][class] {
     overflow: clip;
   }
 }
@@ -13058,7 +13057,7 @@ select[disabled] {
     initial
   ) !important;
 }
-.dir.r4a59j5[class][class] > :not(:first-child) {
+.dir.explore-cards--details__ratings[class][class] > :not(:first-child) {
   margin-inline-start: var(--h-x-sf-jw);
 }
 ._ekwjz2 {
@@ -16259,12 +16258,12 @@ select[disabled] {
   }
 }
 @supports (overflow: clip) {
-  .s1cjsi4j[class][class] {
+  .explore-cards-details__description[class][class] {
     overflow: clip;
   }
 }
 @supports (overflow: clip) {
-  .t1jojoys[class][class] {
+  .explore-cards-details__title[class][class] {
     overflow: clip;
   }
 }
@@ -20330,15 +20329,15 @@ h3:first-child {
     right: 0;
   }
 }
-.f15liw5s[class][class] {
+.explore-cards-details__description[class][class] {
   grid-column: 1/-1;
 }
-.t5eq1io[class][class] {
+.explore-cards--details__ratings[class][class] {
   grid-column: -2/-1;
   grid-row: 1;
   justify-self: end;
 }
-.cb4nyux[class][class] {
+.explore-cards-details-wrapper[class][class] {
   display: grid;
   gap: var(--card-content-grid_gap, var(--h-x-sf-jw));
   grid-template-columns: var(
@@ -20347,7 +20346,7 @@ h3:first-child {
   );
   grid-template-rows: var(--card-content-grid_template-rows, unset);
 }
-.g1tup9az[class][class] {
+.explore-cards-details-wrapper[class][class] {
   font-size: 15px;
   line-height: 19px;
   --card-content-grid_gap: var(--d-b-mrdy) var(--fgg-f-l-a);
@@ -20360,10 +20359,10 @@ h3:first-child {
 .dir.mz543g6[class][class] {
   margin-bottom: var(--b-y-unon);
 }
-.pquyp1l[class][class] {
+.explore-cards-details__price[class][class] {
   grid-column: 1/-1;
 }
-.dir.pquyp1l[class][class] {
+.dir.explore-cards-details__price[class][class] {
   margin-top: 6px;
 }
 .cy5jw6o[class][class] {
@@ -20821,7 +20820,7 @@ h3:first-child {
 .s1tdgjmu[class][class] {
   visibility: hidden;
 }
-.r4a59j5[class][class] {
+.explore-cards--details__ratings[class][class] {
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -20831,7 +20830,7 @@ h3:first-child {
   display: -ms-flexbox;
   display: flex;
 }
-.r4a59j5[class][class] > :not(:first-child) {
+.explore-cards--details__ratings[class][class] > :not(:first-child) {
   margin-inline-start: var(--h-x-sf-jw);
 }
 .ru0q88m[class][class] {
@@ -20845,7 +20844,7 @@ h3:first-child {
   align-items: center;
   color: var(--f-k-smk-x);
 }
-.s1cjsi4j[class][class] {
+.explore-cards-details__description[class][class] {
   line-height: inherit;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -20855,11 +20854,11 @@ h3:first-child {
   color: var(--fo-jk-r-s);
 }
 @supports (overflow: clip) {
-  .s1cjsi4j[class][class] {
+  .explore-cards-details__description[class][class] {
     overflow: clip;
   }
 }
-.t1jojoys[class][class] {
+.explore-cards-details__title[class][class] {
   line-height: inherit;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -20871,7 +20870,7 @@ h3:first-child {
   word-break: var(--title_word-break, break-all);
 }
 @supports (overflow: clip) {
-  .t1jojoys[class][class] {
+  .explore-cards-details__title[class][class] {
     overflow: clip;
   }
 }
