add global comment to use after merging

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,4 @@
+/*! GLOBAL ---------------------------------------------------------------> */
 @font-face {
   font-family: Circular;
   unicode-range: U+0000-03FF, U+0500-058F, U+0700-074F, U+0780-FAFF, U+FE00-FE6F,
@@ -24723,3 +24724,4 @@ button[data-testid="cypress-headernav-profile"]:focus + .c3i7glo[class][class],
 @media (min-width:1440px) {}
 
 @media (min-width:1440px) {}
+/*! /GLOBAL ---------------------------------------------------------------> */
