--- a/assets/css/pages/trips.css
+++ b/assets/css/pages/trips.css
@@ -342,6 +342,9 @@ body {
   -moz-appearance: none !important;
   appearance: none !important;
   background: 0 0 !important;
+  /* clean-css ignore:start */
+  border: 1px solid var(--j-qkgmf) !important;
+  /* clean-css ignore:end */
   border: 1px solid var(--j-qkgmf) !important;
   color: var(--f-k-smk-x) !important;
   cursor: pointer !important;
