remove important from _60quu0 & 6s0pc0 to let utilities override

--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -8396,21 +8396,21 @@ select[disabled] {
   z-index: 0 !important;
 }
 ._60quu0 {
-  -webkit-box-pack: justify !important;
-  -ms-flex-pack: justify !important;
-  -webkit-box-align: center !important;
-  -ms-flex-align: center !important;
-  color: #222 !important;
-  display: -webkit-box !important;
-  display: -moz-box !important;
-  display: -ms-flexbox !important;
-  display: -webkit-flex !important;
-  display: flex !important;
-  -webkit-align-items: center !important;
-  align-items: center !important;
-  -webkit-justify-content: space-between !important;
-  justify-content: space-between !important;
-  margin-bottom: 16px !important;
+  -webkit-box-pack: justify ;
+  -ms-flex-pack: justify ;
+  -webkit-box-align: center ;
+  -ms-flex-align: center ;
+  color: #222 ;
+  display: -webkit-box ;
+  display: -moz-box ;
+  display: -ms-flexbox ;
+  display: -webkit-flex ;
+  display: flex ;
+  -webkit-align-items: center ;
+  align-items: center ;
+  -webkit-justify-content: space-between ;
+  justify-content: space-between ;
+  margin-bottom: 16px ;
 }
 ._mrriojd {
   margin-right: 24px !important;
@@ -10145,12 +10145,12 @@ select[disabled] {
   margin-right: -6px !important;
 }
 ._6s0pc0 {
-  -webkit-box-align: baseline !important;
-  -webkit-box-pack: justify !important;
-  justify-content: space-between !important;
-  align-items: baseline !important;
-  display: inline-flex !important;
-  width: 100% !important;
+  -webkit-box-align: baseline ;
+  -webkit-box-pack: justify ;
+  justify-content: space-between ;
+  align-items: baseline ;
+  display: inline-flex ;
+  width: 100% ;
 }
 ._1vhvo6y {
   font-size: 22px !important;
