--- a/assets/css/pages/merchandising.css
+++ b/assets/css/pages/merchandising.css
@@ -1528,7 +1528,7 @@
   }
 }
 ._1jktf32q:hover {
-  border: var(--ehcta-border-highlighted) )!important
+  border: var(--ehcta-border-highlighted) !important;
 }
 ._14d5b3i {
   -webkit-box-pack: center!important;
