--- a/assets/css/pages/calendar.css
+++ b/assets/css/pages/calendar.css
@@ -1376,7 +1376,7 @@ body {
 ._zrqzg0i {
   background: #fff!important;
   border: 1px solid #717171!important;
-  border-radius: 8px!important 0!important 0!important!important 8px!important;
+  border-radius: 8px 0 0 8px;
   color: #222!important;
   line-height: 18!important;
   padding: 7px 15px!important;
@@ -1400,7 +1400,7 @@ body {
 }
 ._1fmtfgn1 {
   border: 1px solid #717171!important;
-  border-radius: 0!important 0!important 0!important 0!important!important!important!important!important;
+  border-radius: 0 0 0 0;
   line-height: 18!important;
   padding: 7px 15px!important;
   overflow: hidden!important;
@@ -1428,7 +1428,7 @@ body {
 ._1oahr65z {
   background: #fff!important;
   border: 1px solid #717171!important;
-  border-radius: 0!important 8px 8px 0!important!important!important;
+  border-radius: 0 8px 8px 0;
   color: #222!important;
   line-height: 18!important;
   padding: 7px 15px!important;
