--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -1,3 +1,4 @@
+/* Animations */
 @keyframes keyframe_127wuha {
   from {
     opacity: 0;
@@ -340,3 +341,4 @@
     transform: none
   }
 }
+/* /Animations */
