--- a/src/css/components/modal.css
+++ b/src/css/components/modal.css
@@ -1,3 +1,4 @@
+/* Modals */
 .modal__backdrop {
   z-index: 2000!important;
   position: fixed!important;
@@ -36,3 +37,4 @@
     min-height: 64px!important
   }
 }
+/* /Modals */
