--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,3 +1,4 @@
+/* Root */
 :root {
   --h-l-f-om-o: 4px;
   --go-h-jh-l: 8px;
@@ -83,3 +84,4 @@
   --g-lm-u-p: normal;
   --mq-yk-l: 0.04em
 }
+/* /Root */
