--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,3 +1,4 @@
+/* Fonts */
 @font-face {
   font-family: Circular;
   unicode-range: U+0000-03FF,U+0500-058F,U+0700-074F,U+0780-FAFF,U+FE00-FE6F,U+FF00-EFFFF,U+FFFFE-10FFFF;
@@ -148,3 +149,4 @@
   font-weight: 400;
   font-style: normal
 }
+/* /Fonts */
