--- a/src/css/base.css
+++ b/src/css/base.css
@@ -29,4 +29,94 @@ body {
   line-break: strict;
   overflow-x: hidden
 }
+@media print {
+  * {
+    color: #000!important;
+    background: 0 0!important;
+    -webkit-box-shadow: none!important;
+    -moz-box-shadow: none!important;
+    box-shadow: none!important;
+    text-shadow: none!important
+  }
+  a,
+  a:visited {
+    text-decoration: underline
+  }
+  abbr[title]:after {
+    content: ' (' attr(title) ')'
+  }
+  blockquote,
+  pre {
+    border: 1px solid #999;
+    page-break-inside: avoid
+  }
+  thead {
+    display: table-header-group
+  }
+  img,
+  tr {
+    page-break-inside: avoid
+  }
+  img {
+    max-width: 100%!important
+  }
+  @page {
+    margin: 2cm .5cm
+  }
+  h2,
+  h3,
+  p {
+    orphans: 3;
+    widows: 3
+  }
+  h2,
+  h3 {
+    page-break-after: avoid
+  }
+}
+@media (max-width:743px) {
+  .text-jumbo {
+    font-size: 31px
+  }
+  .h1,
+  h1 {
+    font-size: 41px
+  }
+  .h2,
+  h2 {
+    font-size: 30px
+  }
+  .h3,
+  h3 {
+    font-size: 22px
+  }
+  .h4,
+  h4 {
+    font-size: 17px
+  }
+  .h5,
+  h5 {
+    font-size: 15px
+  }
+  .h6,
+  h6 {
+    font-size: 13px
+  }
+  .h1 small,
+  h1 small {
+    font-size: 26px
+  }
+  .h2 small,
+  h2 small {
+    font-size: 20px
+  }
+  .h3 small,
+  h3 small {
+    font-size: 15px
+  }
+  .h4 small,
+  h4 small {
+    font-size: 14px
+  }
+}
 /* /Base */
