fix border bug from header menu

--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -13568,7 +13568,7 @@ h3:first-child {
 }
 @media (-webkit-max-device-pixel-ratio: 2) {
   .dir.vmfx3gj[class][class] {
-    border: 0.5px solid;
+    border: 0.5px solid rgb(0 0 0 / 0.3);
   }
 }
 .vmfx3gj[class][class]:focus-visible {
