--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -2,6 +2,9 @@
 .d-none {
   display: none!important
 }
+.d-flex {
+  display: flex !important;
+}
 .hide-scrollbar::-webkit-scrollbar {
   display: none!important
 }
@@ -77,5 +80,179 @@
     padding-right: 24px;
     padding-left: 24px
   }
+}
+.flex-column {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-direction: column !important;
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+}
+.flex-items::after,
+.flex-items::before {
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  content: '' !important;
+}
+.flex-items-center {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+}
+.flex {
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+}
+.flex-items-center-content-between {
+  -webkit-box-pack: justify !important;
+  -ms-flex-pack: justify !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: space-between !important;
+  justify-content: space-between !important;
+}
+.flex-1 {
+  -webkit-flex: 1 !important;
+  -ms-flex: 1 1 0% !important;
+  flex: 1 !important;
+}
+.flex-grow-1 {
+  -webkit-box-flex: 1 !important;
+  -ms-flex-positive: 1 !important;
+  -webkit-flex-grow: 1 !important;
+  flex-grow: 1 !important;
+}
+.contents {
+  display: contents !important;
+}
+.inline-block {
+  display: inline-block !important;
+}
+.block {
+  display: block !important;
+}
+.relative {
+  position: relative;
+}
+.absolute {
+  position: absolute !important;
+}
+.ml1 {
+  margin-left: 8px;
+}
+.m2 {
+  margin: 16px;
+}
+.mt2 {
+  margin-top: 16px;
+}
+.mb2 {
+  margin-bottom: 16px;
+}
+.ml2 {
+  margin-left: 16px;
+}
+.p2 {
+  padding: 16px;
+}
+.m4 {
+  margin: 32px;
+}
+.m5 {
+  margin: 40px;
+}
+.m6 {
+  margin: 48px;
+}
+.visible {
+  visibility: visible !important;
+}
+.text-underline {
+  text-decoration: underline !important;
+}
+.heading-reset {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+.heading-reset:focus {
+  outline: 0 !important;
+}
+.list-reset-horizontal {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+.list-reset-horizontal:nth-child(1n) > li {
+  display: inline-block !important;
+}
+.screen-reader-text {
+  border: 0 !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+.visually-hidden {
+  -webkit-clip: rect(0 0 0 0);
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.dir.visually-hidden {
+  border: 0;
+  padding: 0;
+}
+.vh-100 {
+  height: 100% !important;
+  width: 100% !important;
+}
+.heading:focus {
+  outline: 0 !important;
+}
+.heading {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 /* /Utilities */
